# twothousand-forty-eight

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  compile_wasm.sh  patch_wasm.js  publish.sh  rebuild_docs.sh
.github/workflows/: rust.yml
benches/: board.rs  parser.rs  validator.rs
docs/: ayu.css  crates.js  dark.css  index.html  light.css  main.js  rustdoc.css  search-index.js  search.js  settings.html  settings.js  source-files.js  source-script.js  storage.js
docs/bumpalo/: all.html  enum.AllocOrInitError.html  index.html  struct.Bump.html  struct.ChunkIter.html  struct.ChunkRawIter.html
docs/itoa/: all.html  index.html  struct.Buffer.html  trait.Integer.html
docs/libc/: all.html  constant.ABS_CNT.html  constant.ABS_MAX.html  constant.ADFS_SUPER_MAGIC.html  constant.ADJ_ESTERROR.html  constant.ADJ_FREQUENCY.html  constant.ADJ_MAXERROR.html  constant.ADJ_MICRO.html  constant.ADJ_NANO.html  constant.ADJ_OFFSET.html  constant.ADJ_OFFSET_SINGLESHOT.html  constant.ADJ_OFFSET_SS_READ.html  constant.ADJ_SETOFFSET.html  constant.ADJ_STATUS.html  constant.ADJ_TAI.html  constant.ADJ_TICK.html  constant.ADJ_TIMECONST.html  constant.AFFS_SUPER_MAGIC.html  constant.AFS_SUPER_MAGIC.html  constant.AF_IB.html  constant.AF_MPLS.html  constant.AF_NFC.html  constant.AF_VSOCK.html  constant.AF_XDP.html  constant.AT_STATX_DONT_SYNC.html  constant.AT_STATX_FORCE_SYNC.html  constant.AT_STATX_SYNC_AS_STAT.html  constant.AT_STATX_SYNC_TYPE.html  constant.AUTOFS_SUPER_MAGIC.html  constant.BINDERFS_SUPER_MAGIC.html  constant.BPF_FS_MAGIC.html  constant.BTRFS_SUPER_MAGIC.html  constant.BUFSIZ.html  constant.CANFD_BRS.html  constant.CANFD_ESI.html  constant.CANFD_MAX_DLC.html  constant.CANFD_MAX_DLEN.html  constant.CANFD_MTU.html  constant.CAN_BCM.html  constant.CAN_EFF_FLAG.html  (+1196 more)
docs/proc_macro2/: all.html  index.html
docs/rand/: trait.CryptoRng.html  trait.RngCore.html  trait.SeedableRng.html
docs/ryu/: all.html  index.html  struct.Buffer.html  trait.Float.html
docs/serde_json/: struct.Map.html
docs/sha2/: struct.Sha224.html  struct.Sha256.html  struct.Sha384.html  struct.Sha512.html  struct.Sha512Trunc224.html  struct.Sha512Trunc256.html
docs/syn/: all.html  enum.Lit.html  enum.Stmt.html  index.html  struct.Block.html  struct.Local.html
docs/twothousand_forty_eight/: all.html  constant.DEBUG_INFO.html  fn.__wasm_bindgen_generated_add_random.html  fn.__wasm_bindgen_generated_apply_move.html  fn.__wasm_bindgen_generated_get_frames.html  fn.__wasm_bindgen_generated_hash.html  fn.__wasm_bindgen_generated_parse.html  fn.__wasm_bindgen_generated_validate.html  fn.add_random.html  fn.add_random_to_board.html  fn.apply_move.html  fn.get_frames.html  fn.get_random_tile_to_add.html  fn.hash.html  fn.parse.html  fn.validate.html  index.html  sidebar-items.js
docs/typenum/: macro.op.html  type.False.html  type.N1.html  type.N10.html  type.N100.html  type.N1000.html  type.N10000.html  type.N100000.html  type.N1000000.html  type.N10000000.html  type.N100000000.html  type.N1000000000.html  type.N10000000000.html  type.N100000000000.html  type.N1000000000000.html  type.N10000000000000.html  type.N100000000000000.html  type.N1000000000000000.html  type.N10000000000000000.html  type.N100000000000000000.html  type.N1000000000000000000.html  type.N1001.html  type.N1002.html  type.N1003.html  type.N1004.html  type.N1005.html  type.N1006.html  type.N1007.html  type.N1008.html  type.N1009.html  type.N101.html  type.N1010.html  type.N1011.html  type.N1012.html  type.N1013.html  type.N1014.html  type.N1015.html  type.N1016.html  type.N1017.html  type.N1018.html  (+3239 more)
docs/wasm_bindgen/: all.html  fn.externref_heap_live_count.html  fn.function_table.html  fn.intern.html  fn.memory.html  fn.throw_str.html  fn.throw_val.html  fn.unintern.html  index.html  struct.Clamped.html  struct.JsStatic.html  struct.JsValue.html  trait.JsCast.html  trait.UnwrapThrowExt.html
docs/wasm_bindgen_backend/: all.html  index.html  macro.bail_span.html  macro.err_span.html  struct.Diagnostic.html  trait.TryToTokens.html
docs/wasm_bindgen_macro/: all.html  attr.__wasm_bindgen_class_marker.html  attr.wasm_bindgen.html  index.html
examples/: 2048-tui.rs  rng-uniformity-test.rs  seed-finder.rs
games/: GAME3X3A.txt  GAME4X4.txt  GAME4X4B.txt
src/: board.rs  direction.rs  lib.rs  lib_testgames.rs  parser.rs  recording.rs  rules.rs  validator.rs
(+6995 files in other folders)
