[package]
name = "twothousand-forty-eight"
version = "0.22.1"
edition = "2021"
authors = ["xypine <elias.eskelinen@pm.me>"]
license = "MIT"
keywords = ["2048", "game"]
description = "a basic engine and move validator for the game 2048"
repository = "https://github.com/hallabois/twothousand-forty-eight"
documentation = "https://docs.rs/twothousand_forty_eight"
exclude = ["/games"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sha2 = { version = "0.9.8" }
wasm-bindgen = { version = "0.2.87", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = "1.0"
base64 = "0.21.2"
convert-base = "1.1.2"
wasm-bindgen-futures = "0.4.37"
serde-wasm-bindgen = "0.5.0"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"], optional = true }
anyhow = "1.0"
tsify = { version = "0.4.5", optional = true }

[dev-dependencies]
# Used for benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
ratatui = { version = "0.21.0", features = ["all-widgets"] }
anyhow = "1.0"
crossterm = "0.26.1"
rayon = "1.7.0"

[[bench]]
name = "validator"
harness = false

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "board"
harness = false

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
opt-level = 3 # All optimizations

[features]
default = []
all = ["wasm"]
wasm = ["wasm-bindgen", "getrandom", "tsify"]
